--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2d2949535e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
@@ -13,15 +15,47 @@
 </head>
 <body>
     <header> </header>
-
+    <div><h1>Simple Weather App</h1></div>
     <div class="weather-form">
-        <input required='true' class="input-text" type="text" placeholder="Search for any city">
-        <button class="removeForm" type="submit">Search</button>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control input-text" placeholder="Search for any city" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-primary removeForm" type="button" type="submit">Search</button>
+        </div>
     </div>
     <!-- Weather-info should only appear when submit is clicked and data is loaded -->
     <div class="weather-info">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Weather Information</h5>
+                    <p class="card-text">According to OpenWeatherAPI, this is the data for the weather in <span class="city"></span>, <span class="country"></span></p>
+                    <div class="rows">
+                        <div class="row">
+                            <h4 class="currentTemp"></h4>
+                            <h4 class="feelsLike"> </h4>
+                        </div>
+                        <div class="row">
+                            <h4 class="highTemp"></h4>
+                            <h4 class="lowTemp"></h4>
+                        </div>
+                        <div class="row">
+                            <h4 class="humidity"></h4>
+                            <h4 class="windSpeed"></h4>
+                        </div>
+                        <div class="row">
+                            <h4 class="visibility"></h4>
+                            <h4 class="pressure"></h4>
+                        </div>
+                    </div>  
+                </div>
+                <!-- <div class="card-body">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div> -->
+            </div>
+    </div>
+    <div class="weather-info">
             <div class="bottom-info">
-                <div class="top-half"> <!-- Flexbox will work best here -->
+                <div class="top-half"> 
                     <div class="top-half-item item-1">
                         <h4 class="text-bigger currentTemp">Now: </h4>
                         <div class="high-and-low">
@@ -32,7 +66,7 @@
                     <div class="top-half-item item-2">
                         <div class="feels-like">
 
-                            <h4 class="feelsLike">Feels like: </h4>
+                            <!-- <h4 class="feelsLike">Feels like: </h4> -->
                             <h4 class="humidity">Humidity: </h4>
                             <h4 class="windSpeed">Wind: </h4>
 
@@ -48,19 +82,39 @@
                 </div>
 
                 <div class="top-info">
-                    <!-- <i class="fas fa-cloud-sun"></i> Sun Icon -->
+                    <i class="fas fa-cloud-sun"></i> Sun Icon
                     <img class='icon' src="" alt="">
                     <div class="city-and-description">
                         <h4 class="city"></h4>
-                        <h4 class="description"></h3>
+                        <h4 class="description"></h4>
                     </div>
                 </div>
             </div>
     </div>
-    
-
-
     <footer> </footer>
-    <script src="/src/app.js"></script>
+    
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+  <script src="jquery-background-slideshow.js"></script>
+  <script>
+      $(document).ready(function() {
+        const imgList = [
+            "images/1.jpg",
+            "images/2.jpg",
+            "images/3.jpg",
+            "images/4.jpg",
+            "images/5.jpg",
+            "images/6.jpg",
+            "images/7.jpg"
+        ]
+        $("body").backgroundSlideshow({
+            images: imgList,
+            delay: 5000
+        })
+      });
+  </script>
+  <script src="./app.js"></script>
 </body>
 </html>
