--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                 </div> -->
             </div>
     </div>
-    <div class="weather-info">
+
+<!-- Code below is obsolete -->
+
+    <div class="weather-infoo">
             <div class="bottom-info">
                 <div class="top-half"> 
                     <div class="top-half-item item-1">
