--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <!-- Code below is obsolete -->
 
-    <div class="weather-infoo">
+    <div class="weather-info">
             <div class="bottom-info">
                 <div class="top-half"> 
                     <div class="top-half-item item-1">
